--- a/custom_components/soundbeatsv2/manifest.json
+++ b/custom_components/soundbeatsv2/manifest.json
@@ -5,7 +5,7 @@
   "config_flow": true,
   "dependencies": ["frontend", "websocket_api", "media_player"],
   "documentation": "https://github.com/mholzi/Soundbeatsv2",
-  "integration_type": "hub",
+  "integration_type": "service",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/mholzi/Soundbeatsv2/issues",
   "requirements": [],
